examples/test/testpolicy5182.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5182
  namespace: namespace317
spec:
  podSelector:
    matchLabels:
      key37: value43
      key49: value14
      key14: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value8
      podSelector:
        matchLabels:
          key32: value10
          key2: value18
